// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Queries when fetching a tag by ID when there is a tag with the given ID should return the expected result 1`] = `
Object {
  "actions": Array [],
  "id": "1",
  "label": "plants",
  "members": Array [
    Object {
      "id": "1",
      "type": "term",
    },
    Object {
      "id": "23",
      "type": "book",
    },
    Object {
      "id": "24",
      "type": "book",
    },
    Object {
      "id": "1",
      "type": "vocabularyList",
    },
    Object {
      "id": "100",
      "type": "spatialFeature",
    },
    Object {
      "id": "2005",
      "type": "note",
    },
    Object {
      "id": "9",
      "type": "note",
    },
    Object {
      "id": "11",
      "type": "note",
    },
  ],
}
`;

exports[`Tag Queries when fetching all tags should return the expected result 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "id": "1",
      "label": "plants",
      "members": Array [
        Object {
          "id": "1",
          "type": "term",
        },
        Object {
          "id": "23",
          "type": "book",
        },
        Object {
          "id": "24",
          "type": "book",
        },
        Object {
          "id": "1",
          "type": "vocabularyList",
        },
        Object {
          "id": "100",
          "type": "spatialFeature",
        },
        Object {
          "id": "2005",
          "type": "note",
        },
        Object {
          "id": "9",
          "type": "note",
        },
        Object {
          "id": "11",
          "type": "note",
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "2",
      "label": "animals",
      "members": Array [
        Object {
          "id": "2",
          "type": "term",
        },
        Object {
          "id": "3",
          "type": "term",
        },
        Object {
          "id": "102",
          "type": "spatialFeature",
        },
        Object {
          "id": "2004",
          "type": "note",
        },
        Object {
          "id": "7",
          "type": "note",
        },
        Object {
          "id": "1",
          "type": "bibliographicReference",
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "3",
      "label": "placenames",
      "members": Array [
        Object {
          "id": "0",
          "type": "photograph",
        },
        Object {
          "id": "110",
          "type": "transcribedAudio",
        },
        Object {
          "id": "2003",
          "type": "note",
        },
        Object {
          "id": "5",
          "type": "note",
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "4",
      "label": "songs",
      "members": Array [
        Object {
          "id": "1",
          "type": "photograph",
        },
        Object {
          "id": "2002",
          "type": "note",
        },
        Object {
          "id": "3",
          "type": "note",
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "5",
      "label": "legends",
      "members": Array [
        Object {
          "id": "2",
          "type": "vocabularyList",
        },
        Object {
          "id": "101",
          "type": "spatialFeature",
        },
        Object {
          "id": "2001",
          "type": "note",
        },
        Object {
          "id": "1",
          "type": "note",
        },
        Object {
          "id": "1",
          "type": "mediaItem",
        },
        Object {
          "id": "1",
          "type": "song",
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "6",
      "label": "law",
      "members": Array [
        Object {
          "id": "3",
          "type": "bibliographicReference",
        },
      ],
    },
  ],
  "indexScopedActions": Array [],
}
`;
